@@ -382,7 +382,7 @@ static const InspectApi pm_api =
         mod_ctor,
         mod_dtor
     },
-    IT_PACKET,
+    IT_PROBE,
     (uint16_t)PktType::ANY,
     nullptr, // buffers
     nullptr, // service
